01-basic-example/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: generator
  namespace: lucky-number-app
spec:
  hosts:
  - generator.lucky-number-app.svc.cluster.local
  gateways:
  - mesh # applies to all the sidecars in the mesh
  http:
  - match:
    - headers:
        cookie:
          exact: "user=dev-123"
    route:
    - destination:
        host: generator.lucky-number-app.svc.cluster.local
        subset: v2
  - route:
    - destination:
        host: generator.lucky-number-app.svc.cluster.local
        subset: v1
      weight: 90
    - destination:
        host: generator.lucky-number-app.svc.cluster.local
        subset: v2
      weight: 10
